tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@slicing_non_containers.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/slicing_non_containers.txt
---
error: Slicing can only be used on arrays or strings, not on `i64`.
 --> slicing_non_containers.txt:1:3
  |
1 | {{ one[-1:] }}
  |    ^^^
